fix style on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -52,4 +52,22 @@
     width: 100%;
     padding: 0;
   }
+  .post-list {
+    li {
+      margin-bottom: 0;
+    }
+    h3 {
+      margin-bottom: 8px;
+    }
+  }
+  .post-link {
+    font-size: 16px;
+  }
+  #tags {
+    display: flex;
+    flex-wrap: wrap;
+    li {
+      margin-right: 24px;
+    }
+  }
 }
